# GVM_Linux

./: CMakeLists.txt  CMakeLists.txt~  Context.cpp  Core.cpp  Core.cpp~  Core.h  Core.h~  Create_Structure_stmt.cpp  Datum.cpp  Datum.h  GVM.cpp  GVM.cpp~  GVM.kdev4  Globals.h  Globals.h~  IMemory.cpp  Instruction.cpp  MatchingUnit.cpp~  MatchingUnit.h  Natives.cpp  Natives.cpp~  Natives.h  Natives.h~  Scheduler.cpp  Tag.cpp  Token.cpp  TokenDispatcher.cpp  Tokenizer.cpp  Tokenizer.cpp~  Tokenizer.h  parser.cpp
